--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
   </div>
 
   <footer>
-    <a href="credits.txt">Credits</a> | <a href="https://docs.retbro.optb.qzz.io">Docs</a>
+    <a href="credits.txt">Credits</a> | <a href="https://github.com/OptionallyBlueStudios/Retbro/WiKi">Docs</a>
   </footer>
 
 <script>
