--- a/app/emulator.html
+++ b/app/emulator.html
@@ -17,6 +17,7 @@
     <input type="file" id="input" />
     Drag ROM file or click here
   </div>
+  <h2>Retbro Emulator. Press the </h2>
   <script>
         // Helper: get query params
     function getQueryParam(name) {
