--- a/404.html
+++ b/404.html
@@ -51,8 +51,8 @@
 </head>
 <body>
   <div class="page">
-    <img src="/img/logo-light.png" alt="Logo" class="logo">
     <p class="text">404 - Page not found!</p>
+    <p>RetBro</p>
   </div>
 </body>
 </html>
