--- a/app/emulator.html
+++ b/app/emulator.html
@@ -12,12 +12,11 @@
   </style>
 </head>
 <body>
-  <div id="top"><h1>Retbro </h1></div>
+  <div id="top" style="text-align: center;"><h1>Retbro Emulator | EmulatorJS</h1></div>
   <div id="box">
     <input type="file" id="input" />
     Drag ROM file or click here
   </div>
-  <h2 style="text-align: center;">Retbro Emulator | EmulatorJS</h2>
   <script>
         // Helper: get query params
     function getQueryParam(name) {
