--- a/generator.html
+++ b/generator.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ROM Link Manager</title>
+<title>Retbro Generator</title>
 <style>
   :root {
     --bg-color: #1e1e2f;
@@ -135,8 +135,8 @@ function addSystem() {
   const systemName = document.getElementById('newSystemName').value.trim();
   if (!systemName) return alert("Please enter a system name!");
   if (systems[systemName]) return alert("System already exists!");
-  
-  systems[systemName] = [];
+
+  systems[systemName] = { sys_image: "", roms: [] };
   document.getElementById('newSystemName').value = '';
   renderSystems();
 }
@@ -151,25 +151,33 @@ function editSystemName(oldName) {
   renderSystems();
 }
 
-// Add link
+// Set system image
+function setSystemImage(systemName) {
+  const url = prompt("Enter image URL for " + systemName + ":", systems[systemName].sys_image);
+  if (url === null) return;
+  systems[systemName].sys_image = url;
+  renderSystems();
+}
+
+// Add ROM
 function addLink(systemName) {
-  const url = prompt("Enter download link for " + systemName + ":");
+  const url = prompt("Enter ROM link for " + systemName + ":");
   if (!url) return;
-  systems[systemName].push(url);
+  systems[systemName].roms.push(url);
   renderSystems();
 }
 
-// Edit link
+// Edit ROM
 function editLink(systemName, index) {
-  const newUrl = prompt("Edit download link for " + systemName + ":", systems[systemName][index]);
+  const newUrl = prompt("Edit ROM link for " + systemName + ":", systems[systemName].roms[index]);
   if (!newUrl) return;
-  systems[systemName][index] = newUrl;
+  systems[systemName].roms[index] = newUrl;
   renderSystems();
 }
 
-// Remove link
+// Remove ROM
 function removeLink(systemName, index) {
-  systems[systemName].splice(index, 1);
+  systems[systemName].roms.splice(index, 1);
   renderSystems();
 }
 
@@ -183,21 +191,25 @@ function toggleSystem(systemName) {
 function renderSystems() {
   const container = document.getElementById('systemsContainer');
   container.innerHTML = '';
-  
+
   for (const systemName in systems) {
+    const sysData = systems[systemName];
+
     const card = document.createElement('div');
     card.className = 'system-card';
-    
+
     card.innerHTML = `
       <div class="system-header" onclick="toggleSystem('${systemName}')">
         <h2>${systemName}</h2>
         <div>
-          <button onclick="event.stopPropagation(); addLink('${systemName}')">+ Add Link</button>
+          <button onclick="event.stopPropagation(); addLink('${systemName}')">+ Add ROM</button>
+          <button onclick="event.stopPropagation(); setSystemImage('${systemName}')">Set Image</button>
           <button onclick="event.stopPropagation(); editSystemName('${systemName}')">Edit Name</button>
         </div>
       </div>
+      ${sysData.sys_image ? `<img src="${sysData.sys_image}" alt="${systemName}" style="max-width:100%; display:block; margin:auto;">` : ''}
       <ul class="links-list" id="links-${systemName}">
-        ${systems[systemName].map((link, i) => `
+        ${sysData.roms.map((link, i) => `
           <li>
             <a href="${link}" target="_blank">${link}</a>
             <button onclick="event.stopPropagation(); editLink('${systemName}', ${i})">Edit</button>
@@ -206,7 +218,7 @@ function renderSystems() {
         `).join('')}
       </ul>
     `;
-    
+
     container.appendChild(card);
   }
 }
@@ -216,7 +228,7 @@ function exportJSON() {
   const dataStr = JSON.stringify(systems, null, 2);
   const blob = new Blob([dataStr], { type: "application/json" });
   const url = URL.createObjectURL(blob);
-  
+
   const a = document.createElement('a');
   a.href = url;
   a.download = 'roms.retbrorl';
@@ -230,7 +242,7 @@ function exportJSON() {
 function importJSON(event) {
   const file = event.target.files[0];
   if (!file) return;
-  
+
   const reader = new FileReader();
   reader.onload = function(e) {
     try {
@@ -244,85 +256,17 @@ function importJSON(event) {
   reader.readAsText(file);
 }
 
-// Initialize example system with your full placeholder text
-systems["Retbro"] = [
-    "-------------------------------------------------",
-    "About Your Current Retbro Romlist",
-    "-------------------------------------------------",
-    "Author: My Awesome Name",
-    "Website: https://YOUR.WEBSITE.OR.GITHUB.PAGES.SITE",
-    "Name: My Awesome List",
-    "Description: An Awesome List Made By My Awesome",
-    "Name With My Awesome And Name",
-    "Safari Support: [True]/False",
-    "Chromium Support: [True]/False",
-    "Recommended Browser: Chromium-Based",
-    "Retbro App Support: [True]/False",
-    "iOS Support: True/False/[Partial]",
-    "Android Support: True/False/[Partial]",
-    "Tablet Support: True/False/Partial/[Controller OR Keyboard Required]",
-    "Phone Support: True/False/[Partial]/Controller OR Keyboard Required",
-    "ROM Sources: NONE (Yet)",
-    "Legal: True",
-    "-------------------------------------------------",
-        "Controls",
-    "-------------------------------------------------",
-    "ESC: Go Back",
-    "Enter: Select It",
-    "Arrow Keys: Navigate",
-    "-------------------------------------------------",
-    "Controls (In Game)",
-    "-------------------------------------------------",
-    "Press the controller button in game to view all controls",
-    "Enter: Pause/Play",
-    "Arrow Keys: Move",
-    "-------------------------------------------------",
-    "About",
-    "-------------------------------------------------",
-    "This full Retbro song list was provided to you.",
-    "The author of this would not like this to be",
-    "Redistrubited so please share the website link",
-    "instead of the file.",
-    "Powered By EmulatorJS",
-    "Press The Credits Button In Footer For RetBro Credits",
-    "-------------------------------------------------",
-    "Systems (Supported)",
-    "-------------------------------------------------",
-    "NES",
-    "SNES",
-    "GameBoy",
-    "GameBoy Colour",
-    "Virtual Boy",
-    "Nintendo DS",
-    "Atari 5200",
-    "Mame 2003",
-    "Arcade",
-    "Playstation",
-    "Atari Jaguar",
-    "Atari Lynx",
-    "Sega Saturn",
-    "Sega Megadrive",
-    "Sega Game Gear",
-    "Sega CD",
-    "Nintendo 64",
-    "3do",
-    "Atari 7800",
-    "Atari 2600",
-    "Sega 32x",
-    "Sega MasterSystem",
-    "Commodore 64",
-    "Commodore 128",
-    "Commodore Pet",
-    "Commodore Plus 4",
-    "Commodore Vic20",
-    "Commodore Amiga",
-    "Colecovision",
-    "TurboGrafx 16 (PCE)",
-    "pcfx core",
-    "ngp core",
-    "ws core",
-    "PlayStation Portable (NO SAFARI)"
-];
+// Example
+systems = {
+  "Nintendo Entertainment System": {
+    sys_image: "https://example.com/nes-image.png",
+    roms: ["rom1.nes", "rom2.nes"]
+  },
+  "Super Nintendo": {
+    sys_image: "https://example.com/snes-image.png",
+    roms: ["rom1.smc", "rom2.smc"]
+  }
+};
 
 renderSystems();
 </script>
