--- a/app/index.html
+++ b/app/index.html
@@ -313,7 +313,6 @@ footer {
 </footer>
 
 <script>
-
 const q = new URLSearchParams(location.search);
 let betapass  = q.get("beta"); // 3575
 const betadef = true;
@@ -321,7 +320,6 @@ const betadef = true;
 if (betadef === true) {
   betapass = 3575;
 }
-
 
 /* ---------- DOM ---------- */
 const fileInput = document.getElementById('fileInput');
@@ -344,10 +342,17 @@ let romIndex = 0;
 let metadataCache = new Map();
 
 /* ---------- Utilities ---------- */
-const decodeName = (s) => decodeURIComponent(s).replace(/\.[^/.]+$/, "");
+// decodeName: strip path and file extension only
+const decodeName = (s) => {
+  const base = s.split("/").pop(); // filename only
+  return decodeURIComponent(base.replace(/\.[^/.]+$/, "")); // remove extension
+};
+
 const toLookupTitle = (name) =>
   name.replace(/\[[^\]]*\]/g,"").replace(/\s*\([^)]*\)/g,"").replace(/\s+/g," ").trim();
+
 const basename = (p) => p.split("/").pop();
+
 function el(tag, props={}, ...children){
   const e = document.createElement(tag);
   Object.assign(e, props);
@@ -395,7 +400,7 @@ function buildSystemTiles(){
   updateSystemSelection();
 }
 
-/* ---------- Update system selection (optionally skip scroll) ---------- */
+/* ---------- Update system selection ---------- */
 function updateSystemSelection(scroll = true){
   const tiles = document.querySelectorAll('.system-tile');
   tiles.forEach(t => t.classList.remove('selected'));
@@ -468,7 +473,7 @@ function renderDetail(info){
   romDetailDiv.innerHTML="";
   const top = el("div",{className:"detail-top"},
     el("img",{className:"cover", src:cover, alt:"cover"}),
-    el("div",{},
+    el("div",{} ,
       el("h3",{className:"title", textContent:info.name||"Unknown Title"}),
       el("div",{className:"meta"},
         el("div",{},el("b",{},"System: ")," ",info.system||"Unknown"),
@@ -503,30 +508,21 @@ function launchRomByUrl(url){
   } else {
     window.location.href=`emulator.html?rom=${encodeURIComponent(url)}&prev=` + window.location;
   }
-  
 }
 
-/* ---------- Keyboard ---------- */
-
-
-/* ---------- Horizontal carousel with smooth arrow scrolling + auto-selection ---------- */
-let holdDir = 0; // -1 for left, 1 for right
+/* ---------- Horizontal carousel ---------- */
+let holdDir = 0; 
 let holdInterval = null;
-const SCROLL_SPEED = 8; // pixels per frame
+const SCROLL_SPEED = 8;
 
 function startScrolling(dir) {
   holdDir = dir;
-  if (!holdInterval) {
-    holdInterval = requestAnimationFrame(scrollStep);
-  }
+  if (!holdInterval) holdInterval = requestAnimationFrame(scrollStep);
 }
 
 function stopScrolling() {
   holdDir = 0;
-  if (holdInterval) {
-    cancelAnimationFrame(holdInterval);
-    holdInterval = null;
-  }
+  if (holdInterval) { cancelAnimationFrame(holdInterval); holdInterval = null; }
 }
 
 function scrollStep() {
@@ -534,9 +530,7 @@ function scrollStep() {
     menuDiv.scrollLeft += holdDir * SCROLL_SPEED;
     updateSelectedFromScroll();
     holdInterval = requestAnimationFrame(scrollStep);
-  } else {
-    holdInterval = null;
-  }
+  } else holdInterval = null;
 }
 
 function updateSelectedFromScroll() {
@@ -550,28 +544,10 @@ function updateSelectedFromScroll() {
   tiles.forEach((tile, i) => {
     const tileCenter = tile.offsetLeft + tile.offsetWidth / 2;
     const dist = Math.abs(menuCenter - tileCenter);
-    if (dist < closestDistance) {
-      closestDistance = dist;
-      closestIndex = i;
-    }
+    if (dist < closestDistance) { closestDistance = dist; closestIndex = i; }
   });
 
-  if (systemIndex !== closestIndex) {
-    systemIndex = closestIndex;
-    updateSystemSelection(false); // false = don’t scroll again, already scrolling
-  }
-}
-
-/* ---------- Update system selection (optionally skip scroll) ---------- */
-function updateSystemSelection(scroll = true){
-  const tiles = document.querySelectorAll('.system-tile');
-  tiles.forEach(t => t.classList.remove('selected'));
-  if (tiles[systemIndex]){
-    tiles[systemIndex].classList.add('selected');
-    if(scroll){
-      tiles[systemIndex].scrollIntoView({ behavior:"smooth", inline:"center", block:"nearest" });
-    }
-  }
+  if (systemIndex !== closestIndex) { systemIndex = closestIndex; updateSystemSelection(false); }
 }
 
 /* ---------- Keyboard ---------- */
@@ -596,14 +572,12 @@ document.addEventListener("keyup", (e) => {
   if (e.key === "ArrowRight" || e.key === "ArrowLeft") stopScrolling();
 });
 
-
 function getVisibleButtons(){ return romButtons.filter(b=>b.style.display!=='none'); }
 function getSelectedVisible(){ const visible=getVisibleButtons(); return visible[Math.min(romIndex,visible.length-1)]; }
 function moveSelection(delta){ const visible=getVisibleButtons(); if(!visible.length) return; romIndex=(Math.min(romIndex,visible.length-1)+delta+visible.length)%visible.length; highlightRomAndShowDetails(); }
 function closeOverlay(){ romOverlay.style.display="none"; romOverlay.setAttribute("aria-hidden","true"); searchInput.blur(); }
 
 /* ---------- Gamepad ---------- */
-/* ---------- Controller (Gamepad API) ---------- */
 let gpIndex = null;
 let lastAxis = { x:0, y:0 };
 let lastMoveTime = 0;
@@ -626,14 +600,12 @@ function pollGamepad(){
         (Math.sign(cur)===dir && Math.abs(cur)>AXIS_DEADZONE && (Math.sign(prev)!==dir || Math.abs(prev)<=AXIS_DEADZONE))
         || (Math.sign(cur)===dir && Math.abs(cur)>AXIS_DEADZONE && now-lastMoveTime>REPEAT_DELAY_MS);
 
-      // horizontal scrolling (menu)
       if(!overlayOpen){
         if(axisTrigger(-1,lastAxis.x,ax)) startScrolling(-1);
         else if(axisTrigger(1,lastAxis.x,ax)) startScrolling(1);
         if(Math.abs(ax)<AXIS_DEADZONE) stopScrolling();
       }
 
-      // vertical overlay selection
       if(overlayOpen){
         if(axisTrigger(-1,lastAxis.y,ay)) moveSelection(-1);
         if(axisTrigger(1,lastAxis.y,ay)) moveSelection(1);
@@ -641,7 +613,6 @@ function pollGamepad(){
 
       lastAxis = {x:ax,y:ay};
       
-      // buttons
       if(A){
         if(overlayOpen){ const sel = getSelectedVisible(); if(sel) launchRomByUrl(sel.dataset.url); }
         else openRomOverlay();
@@ -654,28 +625,26 @@ function pollGamepad(){
 }
 pollGamepad();
 
-/* ---------- ScreenScraper + Picsum fallback ---------- */
+/* ---------- Fetch placeholder info ---------- */
 async function fetchGameInfo(displayName){
   const cleanDisplay = decodeName(displayName);
-  const lookup = toLookupTitle(cleanDisplay);
-  const url = `https://www.screenscraper.fr/api2/jeuInfos.php?devid=demo&devpassword=demo&softname=demo&output=json&romnom=${encodeURIComponent(lookup)}`;
-  try{
-    const res = await fetch(url); const json = await res.json();
-    let game=json?.response?.jeu; if(Array.isArray(game)) game=game[0];
-    if(!game) throw new Error("No game data");
-    let medias=game.medias??game.media??[]; if(!Array.isArray(medias)&&medias) medias=[medias];
-    const getMediaUrl=(types)=>{ if(!Array.isArray(medias)) return ""; const found=medias.find(m=>typeof m?.type==="string" && types.some(t=>m.type.toLowerCase().includes(t))); return found?.url||""; };
-    const cover=getMediaUrl(["box-2d","box","boxart","cover","2d"])||`https://picsum.photos/300/420?random=${encodeURIComponent(lookup)}`;
-    const shots=(Array.isArray(medias)?medias:[]).filter(m=>typeof m?.type==="string"&&/screen|screenshot|title|in-game|ingame/.test(m.type.toLowerCase())).map(m=>m.url).filter(Boolean);
-    let genres=[]; if(Array.isArray(game.genres)){ genres=game.genres.map(g=>g?.nom||g?.name).filter(Boolean); } else if(typeof game.genre==="string"){ genres=[game.genre]; }
-    const info={name:game.nom||cleanDisplay,desc:game.synopsis||game.overview||"No description available.",cover,screenshots:shots,system:game.systeme?.nom||game.system?.name||"",genres,genre:genres[0]||"",dev:game.developpeur?.nom||game.developer?.name||"",publisher:game.editeur?.nom||game.publisher?.name||"",players:game.joueurs?.text||game.players||"",year:game.annee||game.year||""};
-    for(const k of ["system","dev","publisher","players","year"]){ if(!info[k]) info[k]="Unknown"; }
-    if(!info.genres?.length&&!info.genre) info.genre="Unknown";
-    return info;
-  }catch(err){ console.warn("ScreenScraper lookup failed:",err); return {name:cleanDisplay,desc:"No info found.",cover:`https://picsum.photos/300/420?random=${encodeURIComponent(lookup)}`,screenshots:[],system:"Unknown",genres:[],genre:"Unknown",dev:"Unknown",publisher:"Unknown",players:"Unknown",year:"Unknown"}; }
+  return {
+    name: cleanDisplay,
+    desc: "No description available.",
+    cover: `https://picsum.photos/300/420?random=${encodeURIComponent(cleanDisplay)}`,
+    screenshots: [],
+    system: "Unknown",
+    genres: [],
+    genre: "Unknown",
+    dev: "Unknown",
+    publisher: "Unknown",
+    players: "Unknown",
+    year: "Unknown"
+  };
 }
 
 loadFileFromURLParam();
+
 </script>
 </body>
 </html>
