--- a/app/emulator.html
+++ b/app/emulator.html
@@ -19,5 +19,6 @@
   </div>
   <h2>Retbro Emulator. Press the </h2>
   <script src="assets/js/emulator.js"></script>
+  <script src="assets/js/checklogin.js"></script>
 </body>
 </html>
