--- a/app/index.html
+++ b/app/index.html
@@ -646,5 +646,7 @@ async function fetchGameInfo(displayName){
 loadFileFromURLParam();
 
 </script>
+<script src="assets/js/checklogin.js"></script>
+
 </body>
 </html>
