--- a/app/beta-emulator.html
+++ b/app/beta-emulator.html
@@ -118,5 +118,6 @@
         document.body.appendChild(s);
       }
     </script>
+    <script src="assets/js/checklogin.js"></script>
 </body>
 </html>
