--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
             <div class="container">
                 <h1 class="glitch">RetBro</h1>
                 <p class="subtitle">Play Retro Games • Instantly • In Your Browser</p>
-                <a href="https://retbro.optb.qzz.io/app" class="cta-button">Play now!</a>
-                <p>By pressing "Play Now", you agree to the <a href="https://github.com/OptionallyBlueStudios/Retbro/tree/main/Terms-And-Conditions.md" class="footer-link" style="margin-left: 0;">Terms and Conditions</a></p>
+                <a href="https://retbro.optb.qzz.io/login" class="cta-button">Play now!</a>
+                <p>By pressing "Play Now", you agree to the <a href="https://github.com/OptionallyBlueStudios/Retbro/tree/main/Terms-And-Conditions.md" class="footer-link" style="margin-left: 0; margin-right: 0;">Terms and Conditions.</a> <a href="https://rebtro.optb.qzz.io/cl" class="footer-link" style="margin-left: 0;">Community List.</a></p>
             </div>
         </section>
 
@@ -305,6 +305,7 @@
                 <a href="https://retbro.optb.qzz.io/app/credits.txt" class="footer-link">Credits</a>
                 <a href="#" class="footer-link">GitHub</a>
                 <a href="https://github.com/OptionallyBlueStudios/Retbro/tree/main/Terms-And-Conditions.md" class="footer-link">Terms and Conditions</a>
+                <a href="https://rebtro.optb.qzz.io/cl" class="footer-link">Community List</a>
             </div>
         </div>
     </footer>
