--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 <h1 class="glitch">RetBro</h1>
                 <p class="subtitle">Play Retro Games • Instantly • In Your Browser</p>
                 <a href="https://retbro.optb.qzz.io/app" class="cta-button">Play now!</a>
-                <p>By pressing "Play Now", you agree to the <a href="https://github.com/OptionallyBlueStudios/Retbro/tree/main/Terms-And-Conditions.md" class="footer-link" style="margin-left: 0; margin-right: 0;">Terms and Conditions.</a> <a href="https://rebtro.optb.qzz.io/cl" class="footer-link" style="margin-left: 0;">Community List.</a></p>
+                <p>By pressing "Play Now", you agree to the <a href="https://github.com/OptionallyBlueStudios/Retbro/tree/main/Terms-And-Conditions.md" class="footer-link" style="margin-left: 0; margin-right: 0;">Terms and Conditions.</a> <a href="https://retbro.optb.qzz.io/cl" class="footer-link" style="margin-left: 0;">Community List.</a></p>
             </div>
         </section>
 
